# HyperLearning_EssayEvaluation

./: .gitignore  README.md  pyproject.toml  requirements.txt  unzip-all.ps1  unzip-all.sh
data/: weights_config.py  eda.py  json2csv.py  preprocessing.py
src/: essay_dataset.py  essay_model.py  train.py
