[project]
name = "hyperlearning-essayevaluation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.1.1",
    "kiwipiepy>=0.20.2",
    "pandas>=2.2.3",
    "scikit-learn>=1.5.2",
    "torch>=2.5.1",
    "transformers>=4.47.0",
]

[project.optional-dependencies]
cpu = [
  "torch>=2.5.1",
]
cu124 = [
  "torch>=2.5.1",
]

[tool.uv]
conflicts = [
  [
    { extra = "cpu" },
    { extra = "cu124" },
  ],
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", extra = "cpu", marker = "platform_system == 'Linux' or platform_system == 'Windows'" },
  { index = "pytorch-cu124", extra = "cu124", marker = "platform_system == 'Linux' or platform_system == 'Windows'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
